arrumando erro ortográfico

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 
               <h3>Em andamento</h3>
               <p>
-                Web-App pizaria 100% responsivo, com cardápios apresentação do negócio e pedidos online via redes sociais...
+                Web-App pizzaria 100% responsivo, com cardápios apresentação do negócio e pedidos online via redes sociais...
               </p>
             </div>
 
