--- a/index.html
+++ b/index.html
@@ -474,10 +474,10 @@
           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./assets/eu-no-hospital-1.jpg" class="d-block w-100" alt="garoto no hospital com derrame pleural">
+                <img src="./assets/eu-no-hospital-1-paint.png" class="d-block w-100" alt="garoto no hospital com derrame pleural">
               </div>
               <div class="carousel-item">
-                <img src="./assets/eu-no-hospital-3.jpg" class="d-block w-100" alt="garoto no hospital com derrame pleural">
+                <img src="./assets/eu-no-hospital-3-paint.png" class="d-block w-100" alt="garoto no hospital com derrame pleural">
               </div>
               
             </div>
