foi alterado o HTML a section services, retirado um card colocado um link levando a um projeto concluido

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
       <div class="wrapper">
         <header>
           <h4>Projetos</h4>
-          <h2>Projetos concluídos e projetos em andamento.</h2>
+          <h2>Alguns dos meus projetos</h2>
         </header>
 
         <div class="content">
@@ -332,7 +332,7 @@
                 />
               </svg>
 
-              <h3>Em andamento</h3>
+              <h3>Lavagem a seco e impermeabilização de estofados</h3>
               <p>
                Web-App voltado a lavagem a seco e impermeabilização de estofados com conteúdo voltado sobre o negócio 100% Responsivo e com botão WathsApp para orçamentos, acesso a redes sociais...
               </p>
@@ -356,35 +356,14 @@
                 />
               </svg>
 
-              <h3>Em andamento</h3>
+              <h3>Salão de Beleza</h3>
               <p>
-               Web-App de apresentação voltado a salão de beleza, 100% responsivo...
+                Web-App voltado a salão de beleza, 100% responsivo para desktop e celulares, possuindo botão WathsApp para agendamentos de horários e acesso as redes sociais.
+                <a href="https://schwedler123.github.io/clone-repository-salon-project/"> <br> Acesso ao projeto concluído.</a>
               </p>
             </div>
 
-            <div class="card">
-              <svg
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <circle cx="12" cy="12" r="12" fill="#DCE9E2" />
-                <path
-                  d="M17.091 8.18182L10.091 15.1818L6.90918 12"
-                  stroke="#00856F"
-                  stroke-width="1.5"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-
-              <h3>Em andamento</h3>
-              <p>
-                Web-App pizzaria 100% responsivo, com cardápios apresentação do negócio e pedidos online via redes sociais...
-              </p>
-            </div>
+            
             
           </div>
         </div>
