--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 />
               </svg>
 
-              <h3>Web-App-Responsivo modelo voltado para saúde e agendamento de consultas online. </h3>
+              <h3>Web-App-Responsivo modelo voltado para saúde e agendamento de consultas online </h3>
               <p>
                 Este aplicativo é voltado a informações na área da saúde e apresentação do serviço, com botão (WhatsApp) que dá acesso
                 direto ao agendamento de consultas e redes socias, projetado a acessibilidade para pessoas daltônicas e pessoas com deficiência visual,
@@ -359,7 +359,7 @@
               <h3>Salão de Beleza</h3>
               <p>
                 Web-App voltado a salão de beleza, 100% responsivo para desktop e celulares, possuindo botão WathsApp para agendamentos de horários e acesso as redes sociais.
-                <a href="https://schwedler123.github.io/clone-repository-salon-project/"> <br> Acesso ao projeto concluído.</a>
+                <a target="_blank" href="https://schwedler123.github.io/clone-repository-salon-project/"> <br> Acesso ao projeto concluído.</a>
               </p>
             </div>
 
