alteração section home texto

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
           <div class="content">
             <p>
-              Olá meu nome é Tiago Rodrigues Vilela tenho 23 anos sou Desenvolvedor <strong>FrontEnd</strong> e neste Portfólio será apresentado minhas habilidades de <strong>Soft Skills</strong> e <strong> <br>Hard Skills</strong> meus projetos concluídos e os que estão em andamentos, e também um pouco sobre minha história de superação de vida, estarão disponíveis minhas Redes Sociais e meu contato pessoal via e-mail e WathsApp. 
+              Olá meu nome é Tiago Rodrigues Vilela tenho 23 anos sou Desenvolvedor <strong>FrontEnd</strong> e neste Portfólio será apresentado minhas habilidades de <strong>Soft Skills</strong> e <strong> <br>Hard Skills</strong> alguns dos meus projetos e também um pouco sobre minha história de superação de vida, estarão disponíveis minhas Redes Sociais e meu contato pessoal via e-mail e WathsApp. 
             </p>
             <a class="button" href="#contact">
               <svg
