melhorando meta tags em head

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Tiago Vilela" >
+    <meta name="description" content="Deseja fazer um Web-Site/Web-App para seu negócio? Entre em contato comigo e venha conferir o meu trabalho!">
     <title>Tiago Vilela</title>
     <link rel="icon" href="./assets/icon-image-tiago.png">
 
@@ -137,7 +139,7 @@
 
           <div class="content">
             <p>
-              Olá meu nome é Tiago Rodrigues Vilela tenho 23 anos sou Desenvolvedor <strong>FrontEnd</strong> e neste Portfólio será apresentado minhas habilidades de <strong>Soft Skills</strong> e <strong> Hard Skills</strong> alguns dos meus projetos e também um pouco sobre minha história de superação de vida, estarão disponíveis minhas Redes Sociais e meu contato pessoal via e-mail e WathsApp. 
+              Olá meu nome é Tiago Rodrigues Vilela tenho 23 anos sou Desenvolvedor <strong>FrontEnd</strong> e neste Portfólio será apresentado minhas habilidades de <strong>Soft Skills</strong> e <strong> Hard Skills</strong>, alguns dos meus projetos e também um pouco sobre minha história de superação de vida, estarão disponíveis minhas Redes Sociais e meu contato pessoal via e-mail e WathsApp. 
             </p>
             <a class="button" href="#contact">
               <svg
