--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
               de vida pra vocês, tudo começou no ano de 2019, este ano foi um ano bem cansativo para mim no qual eu trabalhava em uma empresa do comércio, exatamente no ano de 2019 
               eu tive mais de 3 pneumonias repetitivas, porém mesmo eu buscando tratar essas pneumonias com plano de sáude que eu tinha elas sempre voltavam e cada vez pior, seguidas 
               de tosses febres e dores no corpo. E então no ano de 2020 foi o ano  onde começa uma batalha na minha vida, no começo do covid-19 no Brasil, eu estava em casa quando 
-              começei a sentir fortes dores no corpo principalmente no peitoral esquerdo que envolvia uma forte dor por todo o corpo. Sem saber oque era presumi que seria um mal jeito apenas e 
+              comecei a sentir fortes dores no corpo principalmente no peitoral esquerdo que envolvia uma forte dor por todo o corpo. Sem saber oque era presumi que seria um mal jeito apenas e 
               que logo iria passar já nessa epóca eu não tinha mais plano de saúde e então fui ao Atendimento Pronto Socorro (UPA), chegando lá o médico pediu um raio-x após olhar o raio-x
               absurdamente falou que meu pulmão estava limpo e que era apenas uma dor muscular, com este laudo médico ele me receitou remédio para dores musculares por 1 semana. Bom se passaram
               1 semana e nada de eu melhorar, já com os sintomas piores com muita falta de ar e vendo que na minha cidade não tinha suporte para tal tratamento, corremos para São Paulo eu e meus pais,
