corrigindo erro ortográficos 2

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
               eu tive mais de 3 pneumonias repetitivas, porém mesmo eu buscando tratar essas pneumonias com plano de sáude que eu tinha elas sempre voltavam e cada vez pior, seguidas 
               de tosses febres e dores no corpo. E então no ano de 2020 foi o ano  onde começa uma batalha na minha vida, no começo do covid-19 no Brasil, eu estava em casa quando 
               comecei a sentir fortes dores no corpo principalmente no peitoral esquerdo que envolvia uma forte dor por todo o corpo. Sem saber oque era presumi que seria um mal jeito apenas e 
-              que logo iria passar já nessa epóca eu não tinha mais plano de saúde e então fui ao Atendimento Pronto Socorro (UPA), chegando lá o médico pediu um raio-x após olhar o raio-x
+              que logo iria passar já nessa época eu não tinha mais plano de saúde e então fui ao Atendimento Pronto Socorro (UPA), chegando lá o médico pediu um raio-x após olhar o raio-x
               absurdamente falou que meu pulmão estava limpo e que era apenas uma dor muscular, com este laudo médico ele me receitou remédio para dores musculares por 1 semana. Bom se passaram
               1 semana e nada de eu melhorar, já com os sintomas piores com muita falta de ar e vendo que na minha cidade não tinha suporte para tal tratamento, corremos para São Paulo eu e meus pais,
               chegando no Hospital lá já entrando no Atendimento Pronto Socorro, o médico pede exames gerais e verificando o raio-x ele nos informa que eu estava com o pulmão bem delicado, e imediatamente ja me internou
