--- a/index.html
+++ b/index.html
@@ -299,7 +299,8 @@
                   stroke-linejoin="round"
                 />
               </svg>
-
+              <br>
+              <img src="./assets/card-doctor-img.jpg" alt="">
               <h3>Web-App-Responsivo modelo voltado para saúde e agendamento de consultas online </h3>
               <p>
                 Este aplicativo é voltado a informações na área da saúde e apresentação do serviço, com botão (WhatsApp) que dá acesso
@@ -352,7 +353,8 @@
                   stroke-linejoin="round"
                 />
               </svg>
-
+              <br>
+              <img src="./assets/card-salon-image.jpg" alt="">
               <h3>Salão de Beleza</h3>
               <p>
                 Web-App voltado a salão de beleza, 100% responsivo para desktop e celulares, possuindo botão WathsApp para agendamentos de horários e acesso as redes sociais.
