inserindo mais uma imagem em card section service

--- a/index.html
+++ b/index.html
@@ -329,7 +329,8 @@
                   stroke-linejoin="round"
                 />
               </svg>
-
+              <br>
+              <img src="./assets/card-rrservice.jpg" alt="">
               <h3>Lavagem a seco e impermeabilização de estofados</h3>
               <p>
                Web-App voltado a lavagem a seco e impermeabilização de estofados com conteúdo voltado sobre o negócio 100% Responsivo e com botão WathsApp para orçamentos, acesso a redes sociais...
