foi feita atualização dos meus projetos

--- a/index.html
+++ b/index.html
@@ -330,10 +330,10 @@
                 />
               </svg>
               <br>
-              <img src="./assets/card-rrservice.jpg" alt="">
-              <h3>Lavagem a seco e impermeabilização de estofados</h3>
+              <img src="./assets/project-veneza-img.jpg" alt="imagem layout mobile e desktop Pizzaria">
+              <h3>Veneza Pizzaria</h3>
               <p>
-               Web-App voltado a lavagem a seco e impermeabilização de estofados com conteúdo voltado sobre o negócio 100% Responsivo e com botão WathsApp para orçamentos, acesso a redes sociais...
+                Web-App de uma pizzaria completo, 100% responsivo com acesso a redes sociais, cardápio, promoções e localização <br> <a target="_blank" href="https://schwedler123.github.io/veneza-pizzaria/">Acesso ao projeto concluído.</a>
               </p>
             </div>
 
@@ -355,7 +355,7 @@
                 />
               </svg>
               <br>
-              <img src="./assets/card-salon-image.jpg" alt="">
+              <img src="./assets/card-salon-image.jpg" alt="Layout imagem mobile e desktop salão de Beleza">
               <h3>Salão de Beleza</h3>
               <p>
                 Web-App voltado a salão de beleza, 100% responsivo para desktop e celulares, possuindo botão WathsApp para agendamentos de horários e acesso as redes sociais.
@@ -369,7 +369,7 @@
         </div>
       </div>
     </section>
-
+    <button style="border-radius: 4rem; width: fit-content; margin-bottom: 2rem; font-size: 1.5rem; text-transform: uppercase;  padding: 1.6rem 6.2rem;" type="button" class="btn btn-outline-dark" data-js="button-project">Mais Projetos</button>
     <section id="about">
       <div class="wrapper">
         <div class="col-a">
