habilitando botão header landing-page

--- a/mais-projetos/projects.html
+++ b/mais-projetos/projects.html
@@ -29,7 +29,7 @@
             <li><a onclick="closeMenu()" href="../index.html#about">Sobre Mim</a></li>
           </ul>
 
-          <a class="button" onclick="closeMenu()" href="#contact"
+          <a class="button" onclick="closeMenu()" href="../index.html#contact"
             >Contate-me
           </a>
 
