adicionando mais 1 projeto e colocando mais 2 cards de projetos em andamento

--- a/mais-projetos/projects.html
+++ b/mais-projetos/projects.html
@@ -155,7 +155,7 @@
                 />
               </svg>
               <br>
-              <img src="../assets/project-poke.jpg" alt="">
+              <img src="../assets/project-poke.jpg" alt="Card mostrando meu projeto de consultas pokémons">
               <h3>Consulta Pokémon </h3>
               <p>
                 É voltado para consultas pokémon pelo nome ou número da pokédex.
@@ -182,7 +182,7 @@
                 />
               </svg>
               <br>
-              <img src="../assets/card-rrservice.jpg" alt="">
+              <img src="../assets/card-rrservice.jpg" alt="Card mostando meu projeto de Impermeabilização de Estofados">
               <h3>lavagem a seco e Impermeabilização de Estofados</h3>
               <p>
                Web-App/Web-Site voltado a lavagem a seco e impermeabilização de estofados com conteúdo voltado sobre o negócio 100% Responsivo e com botão WathsApp para orçamentos, acesso a redes sociais...
@@ -208,7 +208,7 @@
                 />
               </svg>
               <br>
-              <img src="../assets/project-otica-card.jpg" alt="">
+              <img src="../assets/project-otica-card.jpg" alt="Card mostrando meu projeto de Óticas">
               <h3>Ótica FiveX</h3>
               <p>
                Web-App/Web-Site voltado a Óticas, 100% responsivo para desktop e celulares, carousel de imagens, informações apresentando o produto, redirecionamento as redes sociais.
@@ -217,6 +217,91 @@
             </div>
           </div>
         </div>
+        <br><br>
+
+        <div class="content">
+          <div class="cards">
+            <div class="card">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <circle cx="12" cy="12" r="12" fill="#DCE9E2" />
+                <path
+                  d="M17.091 8.18182L10.091 15.1818L6.90918 12"
+                  stroke="#00856F"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+              <br>
+              <img src="../assets/conversor-edit.jpg" alt="Card mostrando meu projeto conversor de moeda">
+              <h3>Conversor de Moeda</h3>
+              <p>
+                Conversor de Moeda EUA Dollar  x BR Real, feito com HTML5 CSS3 e JavaScript
+                <br> <a target="_blank" href="https://schwedler123.github.io/conversor-dollar-real/">Acesso ao projeto concluído.</a>
+              </p>
+              
+            </div>
+
+            <div class="card">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <circle cx="12" cy="12" r="12" fill="#DCE9E2" />
+                <path
+                  d="M17.091 8.18182L10.091 15.1818L6.90918 12"
+                  stroke="#00856F"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+              <br>
+              <img src="../assets/loading-project.png" alt="loading">
+              <h3>Projeto em Andamento</h3>
+              <p>
+                Projeto voltado ao mundo em HQs(histórias em quadrinhos), será 100% responsivo onde o usuário poderá ler as clássicas histórias em quadrinhos do Universo Marvel e DC e baixa-las em PDF
+              </p>
+              
+            </div>
+
+            <div class="card">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <circle cx="12" cy="12" r="12" fill="#DCE9E2" />
+                <path
+                  d="M17.091 8.18182L10.091 15.1818L6.90918 12"
+                  stroke="#00856F"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+              <br>
+              <img src="../assets/loading-project.png" alt="loading">
+              <h3>Pojeto em Andamento</h3>
+              <p>
+                Projeto Cardápio Digital 100% responsivo 
+               <a href=""> <br> Projeto em Andamento.</a>
+              </p>
+            </div>
+          </div>
+        </div>
+
       </div>
     </section>
 
