commitando um link  no card que por agora não irei usar

--- a/mais-projetos/projects.html
+++ b/mais-projetos/projects.html
@@ -296,7 +296,7 @@
               <h3>Pojeto em Andamento</h3>
               <p>
                 Projeto Cardápio Digital 100% responsivo 
-               <a href=""> <br> Projeto em Andamento.</a>
+               <!-- <a href=""> <br> Projeto em Andamento.</a> -->
               </p>
             </div>
           </div>
