--- a/mais-projetos/projects.html
+++ b/mais-projetos/projects.html
@@ -293,7 +293,7 @@
               </svg>
               <br>
               <img src="../assets/loading-project.png" alt="loading">
-              <h3>Pojeto em Andamento</h3>
+              <h3>Projeto em Andamento</h3>
               <p>
                 Projeto Cardápio Digital 100% responsivo 
                <!-- <a href=""> <br> Projeto em Andamento.</a> -->
