--- a/mais-projetos/projects.html
+++ b/mais-projetos/projects.html
@@ -159,7 +159,7 @@
               <h3>Consulta Pokémon </h3>
               <p>
                 É voltado para consultas pokémon pelo nome ou número da pokédex.
-                <br> <a target="_blank" href="https://schwedler123.github.io/model-app-web/">Acesso ao projeto concluído.</a>
+                <br> <a target="_blank" href="https://schwedler123.github.io/projeto-completo-html-css-javascript-pokemon-main/?fbclid=IwAR2N5Qf6ubkvzHi0wR_1wKvuwotPevet70mdzNQq_pwHAKJA0mm4cLCol9Q">Acesso ao projeto concluído.</a>
               </p>
               
             </div>
