corrigindo grid menu

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
               <h3>Salão de Beleza</h3>
               <p>
                 Web-App voltado a salão de beleza, 100% responsivo para desktop e celulares, possuindo botão WathsApp para agendamentos de horários e acesso as redes sociais.
-                <a target="_blank" href="https://schwedler123.github.io/clone-repository-salon-project/"> <br> Acesso ao projeto concluído.</a>
+                <a target="_blank" href="https://schwedler123.github.io/salon-project/"> <br> Acesso ao projeto concluído.</a>
               </p>
             </div>
 
