--- a/index.html
+++ b/index.html
@@ -276,6 +276,11 @@
                Projetos atuando como freelancer.
               </h5>
             </p>
+            <p>
+              <h5>
+               Trabalhando atualmente na Mac Sistemas.
+              </h5>
+            </p>
           </div>
         </div>
       </div>
