--- a/index.html
+++ b/index.html
@@ -346,7 +346,8 @@
               <img src="./assets/project-veneza-img.jpg" alt="imagem layout mobile e desktop Pizzaria">
               <h3>Veneza Pizzaria</h3>
               <p>
-                Web-App de uma pizzaria completo, 100% responsivo com acesso a redes sociais, cardápio, promoções e localização <br> <a target="_blank" href="https://schwedler123.github.io/veneza-pizzaria/">Acesso ao projeto concluído.</a>
+                Web-App de uma pizzaria completo, 100% responsivo com acesso a redes sociais, cardápio, promoções e localização <br> 
+                <!-- <a target="_blank" href="https://schwedler123.github.io/veneza-pizzaria/">Acesso ao projeto concluído.</a> -->
               </p>
             </div>
 
