--- a/index.html
+++ b/index.html
@@ -343,11 +343,11 @@
                 />
               </svg>
               <br>
-              <img src="./assets/project-veneza-img.jpg" alt="imagem layout mobile e desktop Pizzaria">
-              <h3>Veneza Pizzaria</h3>
+              <img src="./assets/WhatsApp Image 2022-11-19 at 13.44.57.jpeg" alt="Cartao de credito">
+              <h3>Cadastramento de Cartão</h3>
               <p>
-                Web-App de uma pizzaria completo, 100% responsivo com acesso a redes sociais, cardápio, promoções e localização <br> 
-                <!-- <a target="_blank" href="https://schwedler123.github.io/veneza-pizzaria/">Acesso ao projeto concluído.</a> -->
+                  Cadastramento de Cartão  formulário com validações de respectivas bandeiras bastante utilizado em Ecommerce 100% responsivo.<br> 
+                <a target="_blank" href="https://schwedler123.github.io/veneza-pizzaria/">Acesso ao projeto concluído.</a>
               </p>
             </div>
 
