--- a/mais-projetos/projects.html
+++ b/mais-projetos/projects.html
@@ -293,10 +293,10 @@
               </svg>
               <br>
               <img src="../assets/loading-project.png" alt="loading">
-              <h3>Projeto em Andamento</h3>
+              <h3>Cardápio online VilelaCoffe</h3>
               <p>
-                Projeto Cardápio Digital 100% responsivo 
-               <!-- <a href=""> <br> Projeto em Andamento.</a> -->
+                Projeto Cardápio online 100% responsivo com a vinculação a um QR-Code
+               <a href="https://incomparable-lamington-0c272b.netlify.app/"> <br> Projeto concluído.</a>
               </p>
             </div>
           </div>
