--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
               <h3>Cadastramento de Cartão</h3>
               <p>
                   Cadastramento de Cartão  formulário com validações de respectivas bandeiras bastante utilizado em Ecommerce 100% responsivo.<br> 
-                <a target="_blank" href="https://schwedler123.github.io/veneza-pizzaria/">Acesso ao projeto concluído.</a>
+                <a target="_blank" href="https://magnificent-shortbread-db5a45.netlify.app/">Acesso ao projeto concluído.</a>
               </p>
             </div>
 
