adicionando imagem cardapio

--- a/mais-projetos/projects.html
+++ b/mais-projetos/projects.html
@@ -292,7 +292,7 @@
                 />
               </svg>
               <br>
-              <img src="../assets/loading-project.png" alt="loading">
+              <img src="../assets/vilelacoffe.jpg" alt="Cardápio online">
               <h3>Cardápio online VilelaCoffe</h3>
               <p>
                 Projeto Cardápio online 100% responsivo com a vinculação a um QR-Code
