att projeto perfil gamer

--- a/index.html
+++ b/index.html
@@ -369,16 +369,13 @@
                 />
               </svg>
               <br>
-              <img src="./assets/card-salon-image.jpg" alt="Layout imagem mobile e desktop salão de Beleza">
-              <h3>Salão de Beleza</h3>
+              <img src="./assets/my-profile-project.jpg" alt="Layout imagem mobile e desktop salão de Beleza">
+              <h3>Perfil Game</h3>
               <p>
-                Web-App voltado a salão de beleza, 100% responsivo para desktop e celulares, possuindo botão WathsApp para agendamentos de horários e acesso as redes sociais.
-                <a target="_blank" href="https://schwedler123.github.io/salon-project/"> <br> Acesso ao projeto concluído.</a>
+                Esse Site/Web-App foi codado com a tecnologia React, se trata de um projeto pessoal perfil gamer com meus jogos favoritos meus streamers favoritos e redirecionamento das minhas redes sociais.
+                <a target="_blank" href="https://kaleidoscopic-phoenix-4db5e4.netlify.app/"> <br> Acesso ao projeto concluído.</a>
               </p>
             </div>
-
-            
-            
           </div>
         </div>
       </div>
