--- a/mais-projetos/projects.html
+++ b/mais-projetos/projects.html
@@ -266,12 +266,12 @@
                 />
               </svg>
               <br>
-              <img src="../assets/loading-project.png" alt="loading">
-              <h3>Projeto em Andamento</h3>
+              <img src="./assets/card-salon-image.jpg" alt="Layout imagem mobile e desktop salão de Beleza">
+              <h3>Salão de Beleza</h3>
               <p>
-                Projeto voltado ao mundo em HQs(histórias em quadrinhos), será 100% responsivo onde o usuário poderá ler as clássicas histórias em quadrinhos do Universo Marvel e DC e baixa-las em PDF
+                Web-App voltado a salão de beleza, 100% responsivo para desktop e celulares, possuindo botão WathsApp para agendamentos de horários e acesso as redes sociais.
+                <a target="_blank" href="https://schwedler123.github.io/salon-project/"> <br> Acesso ao projeto concluído.</a>
               </p>
-              
             </div>
 
             <div class="card">
@@ -295,7 +295,7 @@
               <img src="../assets/vilelacoffe.jpg" alt="Cardápio online">
               <h3>Cardápio online VilelaCoffe</h3>
               <p>
-                Projeto Cardápio online 100% responsivo com a vinculação a um QR-Code
+                Projeto Cardápio online 100% responsivo com a vinculação a um QR-Code codado com a tecnologia React.
                <a href="https://incomparable-lamington-0c272b.netlify.app/"> <br> Projeto concluído.</a>
               </p>
             </div>
