--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
               </svg>
               <br>
               <img src="./assets/my-profile-project.jpg" alt="Layout imagem mobile e desktop salão de Beleza">
-              <h3>Perfil Game</h3>
+              <h3>Perfil Gamer</h3>
               <p>
                 Esse Site/Web-App foi codado com a tecnologia React, se trata de um projeto pessoal perfil gamer com meus jogos favoritos meus streamers favoritos e redirecionamento das minhas redes sociais.
                 <a target="_blank" href="https://kaleidoscopic-phoenix-4db5e4.netlify.app/"> <br> Acesso ao projeto concluído.</a>
