--- a/mais-projetos/projects.html
+++ b/mais-projetos/projects.html
@@ -266,7 +266,7 @@
                 />
               </svg>
               <br>
-              <img src="./assets/card-salon-image.jpg" alt="Layout imagem mobile e desktop salão de Beleza">
+              <img src="../assets/card-salon-image.jpg" alt="Layout imagem mobile e desktop salão de Beleza">
               <h3>Salão de Beleza</h3>
               <p>
                 Web-App voltado a salão de beleza, 100% responsivo para desktop e celulares, possuindo botão WathsApp para agendamentos de horários e acesso as redes sociais.
