--- a/mais-projetos/projects.html
+++ b/mais-projetos/projects.html
@@ -212,7 +212,7 @@
               <h3>Ótica FiveX</h3>
               <p>
                Web-App/Web-Site voltado a Óticas, 100% responsivo para desktop e celulares, carousel de imagens, informações apresentando o produto, redirecionamento as redes sociais.
-               <a href="https://schwedler123.github.io/otica-five-x/#services"> <br> Acesso ao projeto concluído.</a>
+               <!-- <a href="https://schwedler123.github.io/otica-five-x/#services"> <br> Acesso ao projeto concluído.</a> -->
               </p>
             </div>
           </div>
