--- a/mais-projetos/projects.html
+++ b/mais-projetos/projects.html
@@ -137,7 +137,7 @@
 
         <div class="content">
           <div class="cards">
-            <div class="card">
+            <!-- <div class="card">
               <svg
                 width="24"
                 height="24"
@@ -162,7 +162,7 @@
                 <br> <a target="_blank" href="https://schwedler123.github.io/projeto-completo-html-css-javascript-pokemon-main/?fbclid=IwAR2N5Qf6ubkvzHi0wR_1wKvuwotPevet70mdzNQq_pwHAKJA0mm4cLCol9Q">Acesso ao projeto concluído.</a>
               </p>
               
-            </div>
+            </div> -->
 
             <div class="card">
               <svg
