att card mais projetos

--- a/mais-projetos/projects.html
+++ b/mais-projetos/projects.html
@@ -164,7 +164,7 @@
               
             </div> -->
 
-            <div class="card">
+            <!-- <div class="card">
               <svg
                 width="24"
                 height="24"
@@ -188,7 +188,7 @@
                Web-App/Web-Site voltado a lavagem a seco e impermeabilização de estofados com conteúdo voltado sobre o negócio 100% Responsivo e com botão WathsApp para orçamentos, acesso a redes sociais...
               </p>
               
-            </div>
+            </div> -->
 
             <div class="card">
               <svg
